[project]
name = "cmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.1.0",
    "accelerate==0.12.0",
    "av>=14.1.0",
    "blobfile>=3.0.0",
    "clip",
    "decord>=0.6.0",
    "diffusers>=0.23.1",
    "einops>=0.8.1",
    "ftfy==6.1.1",
    "gdown>=5.2.0",
    "huggingface-hub>=0.17.3",
    "imageio>=2.37.0",
    "ipdb>=0.13.13",
    "ml-collections>=1.0.0",
    "moviepy>=2.1.2",
    "natsort>=8.4.0",
    "open-clip-torch>=2.30.0",
    "pandas>=2.2.3",
    "pytorch-fid>=0.3.0",
    "regex>=2024.11.6",
    "sentencepiece>=0.2.0",
    "timm>=1.0.14",
    "tqdm>=4.67.1",
    "transformers==4.34.0",
    "triton>=3.2.0",
    "wandb>=0.19.7",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
